2008-10-13  Aaron Bockover  <abock@gnome.org>

	* configure.ac: Support --disable-gnome, should make building on OS X
	a lot nicer; also support --enable-release, which sets the RELEASE
	define in gmcs and also turns off -warnaserror; pass --enable-release
	when we run distcheck

	* build/build.rules.mk: Use the new GMCS_FLAGS generated by configure

	* src/Backends/Banshee.Gnome/Makefile.am:
	* build/Makefile.am: Respect GCONF_SCHEMAS_INSTALL and ENABLE_GNOME

	* src/Core/Banshee.Core/Resources/translators.xml: Updated

2008-10-12  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs: Made ArtworkId
	exportable for the collection indexer

2008-10-11  Aaron Bockover  <abock@gnome.org>

	Banshee 1.3.2 Released

2008-10-11  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.CollectionIndexer/Banshee.Collection.Indexer.RemoteHelper/SimpleIndexerClient.cs:
	Implement virtual hook functions (OnStarted, OnBeginUpdateIndex, 
	OnEndUpdateIndex); only call OnShutDownWhileIndexing if indeed we were
	shutdown while indexing

	* build/pkg-config/banshee-1-collection-indexer.pc.in: A separate 
	pkg-config file for the standalone and bundleable collection indexer
	helper libary 

	* NEWS: Small fixes

2008-10-10  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.InternetRadio/Banshee.InternetRadio/InternetRadioSource.cs:
	Don't accept input from any source.

2008-10-09  Aaron Bockover  <abock@gnome.org>

	* src/Clients/Beroe/Beroe/IndexerClient.cs: 
	* src/Clients/Beroe/Beroe/RemoteClient.cs: Remove the client from the 
	indexer server

	* src/Core/Banshee.Services/Banshee.Collection.Indexer/ICollectionIndexer.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Indexer/CollectionIndexer.cs:
	Fix standalone API issues

	* src/Core/Banshee.CollectionIndexer/Hyena/ConsoleCrayon.cs:
	* src/Core/Banshee.CollectionIndexer/Hyena/Log.cs:
	* src/Core/Banshee.CollectionIndexer/Hyena/DateTimeUtil.cs: Synced from
	Hyena
