@@ -1,0 +1,4 @@
+#!/bin/bash
+
+build/osx/autogen.sh
+
