@@ -50,17 +50,19 @@ test -z "$srcdir" && srcdir=.
 	error "Directory \"$srcdir\" does not look like the top-level $PROJECT directory"
 }
 
+# MacPorts on OS X only seems to have glibtoolize
+LIBTOOLIZE=$(basename $(which libtoolize || which glibtoolize))
+
 check_autotool_version aclocal 1.9
 check_autotool_version automake 1.9
 check_autotool_version autoconf 2.53
-check_autotool_version libtoolize 1.4.3
+check_autotool_version $LIBTOOLIZE 1.4.3
 check_autotool_version glib-gettextize 2.0.0
 check_autotool_version intltoolize 0.21.0
 check_autotool_version pkg-config 0.14.0
 
-run libtoolize --force --copy
 run glib-gettextize --force --copy
-run intltoolize --force --copy --automake
+run $LIBTOOLIZE --force --copy --automake
 run aclocal -I build/m4/banshee -I build/m4/shamrock $ACLOCAL_FLAGS
 run autoconf
 run autoheader
