@@ -1,0 +1,18 @@
+# Ensure these paths are set to the correct locations of 
+# the XCode, Mono 2.0, and MacPorts installations
+MAC_SDK_PATH="/Developer/SDKs/MacOSX10.4u.sdk"
+MONO_SDK_PATH="/Library/Frameworks/Mono.framework/Versions/Current/"
+MACPORTS_SDK_PATH="/opt/local/bin"
+
+# Where GStreamer and other Banshee dependencies that will
+# end up being bundled should be installed for the build.
+# It's generally a good idea to leave this alone.
+BUILD_PREFIX="`pwd`/bundle-deps"
+
+# Build configuration. Really, no reason to touch this.
+export PKG_CONFIG_PATH="/usr/lib/pkgconfig:$MONO_SDK_PATH/lib/pkgconfig:$BUILD_PREFIX/lib/pkgconfig:$PKG_CONFIG_PATH"
+export PATH="$MACPORTS_SDK_PATH:$MONO_SDK_PATH/bin:$PATH"
+export LDFLAGS="-L$MONO_SDK_PATH/lib $LDFLAGS"
+export CFLAGS="-isysroot $MAC_SDK_PATH -mmacosx-version-min=10.4 -I$MONO_SDK_PATH/include $CFLAGS"
+export LD_LIBRARY_PATH="$MONO_SDK_PATH/lib:$LD_LIBRARY_PATH"
+export ACLOCAL_FLAGS="-I $MONO_SDK_PATH/share/aclocal"
